# serializer version: 1
# name: test_all_entities[switch.neopool_auxiliary_relay_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.neopool_auxiliary_relay_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Auxiliary relay 1',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Auxiliary relay 1',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'aux',
    'unique_id': '1234567890_aux1',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.neopool_auxiliary_relay_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Auxiliary relay 1',
    }),
    'context': <ANY>,
    'entity_id': 'switch.neopool_auxiliary_relay_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[switch.neopool_auxiliary_relay_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.neopool_auxiliary_relay_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Auxiliary relay 2',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Auxiliary relay 2',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'aux',
    'unique_id': '1234567890_aux2',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.neopool_auxiliary_relay_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Auxiliary relay 2',
    }),
    'context': <ANY>,
    'entity_id': 'switch.neopool_auxiliary_relay_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[switch.neopool_auxiliary_relay_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.neopool_auxiliary_relay_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Auxiliary relay 3',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Auxiliary relay 3',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'aux',
    'unique_id': '1234567890_aux3',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.neopool_auxiliary_relay_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Auxiliary relay 3',
    }),
    'context': <ANY>,
    'entity_id': 'switch.neopool_auxiliary_relay_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[switch.neopool_auxiliary_relay_4-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.neopool_auxiliary_relay_4',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Auxiliary relay 4',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Auxiliary relay 4',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'aux',
    'unique_id': '1234567890_aux4',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.neopool_auxiliary_relay_4-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Auxiliary relay 4',
    }),
    'context': <ANY>,
    'entity_id': 'switch.neopool_auxiliary_relay_4',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[switch.neopool_backwash-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.neopool_backwash',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Backwash',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Backwash',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'backwash',
    'unique_id': '1234567890_backwash',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.neopool_backwash-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Backwash',
    }),
    'context': <ANY>,
    'entity_id': 'switch.neopool_backwash',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[switch.neopool_climate_mode_for_heating-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.neopool_climate_mode_for_heating',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Climate mode for heating',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Climate mode for heating',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'clima_onoff',
    'unique_id': '1234567890_mbf_par_clima_onoff',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.neopool_climate_mode_for_heating-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Climate mode for heating',
    }),
    'context': <ANY>,
    'entity_id': 'switch.neopool_climate_mode_for_heating',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[switch.neopool_enable_cover_reduction_when_covered-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.neopool_enable_cover_reduction_when_covered',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Enable cover reduction (when covered)',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Enable cover reduction (when covered)',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'hidro_cover_enable',
    'unique_id': '1234567890_mbf_par_hidro_cover_enable',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.neopool_enable_cover_reduction_when_covered-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Enable cover reduction (when covered)',
    }),
    'context': <ANY>,
    'entity_id': 'switch.neopool_enable_cover_reduction_when_covered',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[switch.neopool_enable_hydrolysis_shutdown_on_high_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.neopool_enable_hydrolysis_shutdown_on_high_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Enable hydrolysis shutdown on high temperature',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Enable hydrolysis shutdown on high temperature',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'hidro_temp_shutdown',
    'unique_id': '1234567890_mbf_par_hidro_temp_shutdown',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.neopool_enable_hydrolysis_shutdown_on_high_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Enable hydrolysis shutdown on high temperature',
    }),
    'context': <ANY>,
    'entity_id': 'switch.neopool_enable_hydrolysis_shutdown_on_high_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[switch.neopool_filtration-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.neopool_filtration',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Filtration',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Filtration',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'filt_manual_state',
    'unique_id': '1234567890_mbf_par_filt_manual_state',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.neopool_filtration-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Filtration',
    }),
    'context': <ANY>,
    'entity_id': 'switch.neopool_filtration',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[switch.neopool_smart_antifreeze-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.neopool_smart_antifreeze',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Smart antifreeze',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Smart antifreeze',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'smart_anti_freeze',
    'unique_id': '1234567890_mbf_par_smart_anti_freeze',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.neopool_smart_antifreeze-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Smart antifreeze',
    }),
    'context': <ANY>,
    'entity_id': 'switch.neopool_smart_antifreeze',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[switch.neopool_uv_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.neopool_uv_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'UV mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'UV mode',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'uv_mode',
    'unique_id': '1234567890_mbf_par_uv_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.neopool_uv_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool UV mode',
    }),
    'context': <ANY>,
    'entity_id': 'switch.neopool_uv_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
